metadata/unpackaged/objects/Opportunity_Sharing_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>Access__c</fullName>
        <label>Access</label>
        <picklist>
            <picklistValues>
                <fullName>Read Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read/Write</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Entity__c</fullName>
        <label>Business Entity</label>
        <picklist>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Group__c</fullName>
        <label>Business Group</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>CSL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LISD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LSBU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MISD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <label>Opportunity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Lease/Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sell Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spares/Replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Actual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role_Access__c</fullName>
        <label>Role Name</label>
        <picklist>
            <picklistValues>
                <fullName>CSL Sales Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LISD Sales Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LSBU Sales Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MISD Sales Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSL Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LISD Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LSBU Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MISD Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISC Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISC Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Territory__c</fullName>
        <label>Sales Territory</label>
        <picklist>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China/Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia/CIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA/Mexico</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stage_Name__c</fullName>
        <label>Stage Name</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Lead Generation and Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.) Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Opportunity Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.) Qualified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Opportunity Sharing Matrix</label>
    <nameField>
        <label>Opportunity Sharing Matrix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Sharing Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>